--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "cenit2odoo",
   "version": "1.0.0",
-  "description": "This is a tool for automating the creation of odoo-integration addons based on a Cenit shared_collections.",
+  "description": "Tool to automating generation of odoo-integration addons from a Cenit-io shared collection.",
   "main": "index.js",
   "bin": "./bin/cli.js",
   "scripts": {
