--- a/package.json
+++ b/package.json
@@ -19,11 +19,15 @@
   },
   "homepage": "https://github.com/yoandrypa/cenit2odoo",
   "dependencies": {
+    "async": "^2.1.2",
+    "colors": "^1.1.2",
+    "columnify": "^1.5.4",
     "commander": "^2.9.0",
     "entities": "^1.1.1",
     "handlebars": "^4.0.5",
     "mkdirp": "^0.5.1",
     "paint-console": "0.0.1",
+    "promptly": "^2.1.0",
     "request": "^2.75.0",
     "string": "^3.3.3"
   }
